# ros_video_streamer

./: CMakeLists.txt  README.md  package.xml
cfg/: QT.cfg
nodes/: client.py  server.py
src/: video_streamer.py
